controls: fix last item being hidden on firefox

--- a/src/components/controls/controls.scss
+++ b/src/components/controls/controls.scss
@@ -1,7 +1,7 @@
 x-controls {
     position: fixed;
     width: 100%;
-    bottom: 5px;
+    bottom: 0;
     display: flex;
     box-sizing: border-box;
     background-color: #f5f5f5;
